sumo/tests/sumo/extended/emitter/errors/xml/double_attribute/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: The attribute 'speed' is already used in element 'emit'
 In file 'input_definition.def.xml'
 At line/column 7/33.

Quitting (on error).
